# telegram-io

./: README.md  docker-compose.dev.yaml  pyproject.toml  requirements.txt
data/: postmaster.pid
data/base/1/: 1247  1247_vm  1249_vm  1255  1259  12907  12907_vm  12912  12912_vm  12916  12917  174  2187  2600_vm  2605_vm  2606  2607  2609  2610  2610_vm  2612  2615  2616_vm  2617_vm  2650  2657  2661  2663  2667  2669  2678  2680  2681  2692  2696  2702  2838_vm  2839  3080  3257  (+13 more)
data/base/13066/: 112  113  1259  12902_vm  12922_vm  12926  2601_vm  2608_vm  2612_vm  2618  2618_vm  2653  2654  2664  2668  2673  2674  2675  2679  2690  2691  2699  2703  2704  2753_vm  2754  2756  2757  2833  2837  2838  2996  3079  3079_vm  3380  3394_vm  3455  3456  3467  3575  (+7 more)
data/base/13067/: 1249  1255_vm  1259_vm  12911  12922  12936  2337  2579  2603_vm  2606_vm  2608  2619  2652  2655  2656  2658  2659  2662  2665  2666  2683  2688  2689  2693  2755  2835  3085  3394  3456_vm  3600_vm  3602  3605  3606  3607  3609  3712  3997  5002  6112  pg_internal.init
data/base/16384/: 1247  1247_vm  1249  1249_vm  1259  1259_vm  12902  (+71 more)
data/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2965  2967  3593  4061  6001  6002  6114  6115  pg_control  pg_internal.init
data/pg_stat_tmp/: db_0.stat  db_13067.stat  db_16384.stat  global.stat
data/pg_xact/: 0000
src/: main.py
src/api/: app.py
src/bot/: __init__.py  bot.py  form.py
src/database/: __init__.py  tables.py
(+3 files in other folders)
