[tool.poetry]
name = "telegram-io"
version = "0.1.0"
description = ""
authors = ["Evgeniy Smirnov <59017716+mrlimax1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
